tests/ui/attributes/unsafe/derive-unsafe-attributes.stderr
error: traits in `#[derive(...)]` don't accept `unsafe(...)`
  --> $DIR/derive-unsafe-attributes.rs:3:10
   |
LL | #[derive(unsafe(Debug))]
   |          ^^^^^^

error: `derive` is not an unsafe attribute
  --> $DIR/derive-unsafe-attributes.rs:6:3
   |
LL | #[unsafe(derive(Debug))]
   |   ^^^^^^
   |
   = note: extraneous unsafe is not allowed in attributes

error: aborting due to 2 previous errors

